--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,6 @@ flask
 flask-cors
 openai
 gTTS
+pydub
 playsound; platform_system == "Windows"  # Windows 使用 playsound 播放音频
 pygame; platform_system != "Windows"     # 非 Windows 系统使用 pygame 播放音频
