--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 streamlit>=1.32.0
 streamlit-webrtc>=0.45.0
 google-generativeai>=0.5.0
+google-generativeai>=0.3.2
 streamlit-mic-recorder>=0.0.5
 Pillow>=10.0.0
 python-dotenv>=1.0.0
