--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ gTTS
 pydub
 playsound; platform_system == "Windows"  # Windows 使用 playsound 播放音频
 pygame; platform_system != "Windows"     # 非 Windows 系统使用 pygame 播放音频
+setuptools
